[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Menu/theWorkingFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Menu/MenuTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/options-64.png" type="Texture" id=4]
[ext_resource path="res://Assets/exit-64.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Menu/Options.gd" type="Script" id=6]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 258.0
margin_bottom = 146.0
rect_scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )

[node name="GameTitle" type="Label" parent="."]
margin_left = 633.75
margin_top = 102.5
margin_right = 769.75
margin_bottom = 121.5
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.498039, 0.196078, 0.529412, 1 )
text = "M. O. A. F. B."
align = 1
valign = 1
uppercase = true

[node name="Main" type="VBoxContainer" parent="."]
margin_left = 15.0
margin_top = 593.75
margin_right = 147.0
margin_bottom = 680.75
rect_scale = Vector2( 2.5, 2.5 )

[node name="Start_Button" type="Button" parent="Main"]
margin_top = -3.0
margin_right = 132.0
focus_neighbour_top = NodePath("../CanvasLayer/HBoxContainer/Quit_Button")
theme = ExtResource( 3 )
text = "START"

[node name="CanvasLayer" type="CanvasLayer" parent="Main"]

[node name="HBoxContainer" type="HBoxContainer" parent="Main/CanvasLayer"]
margin_left = 77.0
margin_top = 517.0
margin_right = 209.0
margin_bottom = 581.0

[node name="Options_Button" type="Button" parent="Main/CanvasLayer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
focus_neighbour_left = NodePath("../Quit_Button")
focus_neighbour_top = NodePath("../../../Start_Button")
focus_neighbour_right = NodePath("../Quit_Button")
focus_neighbour_bottom = NodePath("../../../Start_Button")
theme = ExtResource( 3 )
icon = ExtResource( 4 )
icon_align = 1

[node name="Quit_Button" type="Button" parent="Main/CanvasLayer/HBoxContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
focus_neighbour_left = NodePath("../Options_Button")
focus_neighbour_top = NodePath("../../../Start_Button")
focus_neighbour_right = NodePath("../Options_Button")
focus_neighbour_bottom = NodePath("../../../Start_Button")
theme = ExtResource( 3 )
icon = ExtResource( 5 )

[node name="Options" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Settings" type="VBoxContainer" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="BackToMenu" type="Button" parent="Options/Settings"]
margin_right = 90.0
margin_bottom = 19.0
theme = ExtResource( 3 )
text = "BACK"

[node name="SettingsTitle" type="Label" parent="Options"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -105.0
margin_bottom = 19.0
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="MouseDissappear" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="go_to_options" from="." to="Options" method="_on_Menu_go_to_options"]
[connection signal="mouse_entered" from="Main/Start_Button" to="." method="_on_Start_Button_mouse_entered"]
[connection signal="pressed" from="Main/Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="mouse_entered" from="Main/CanvasLayer/HBoxContainer/Options_Button" to="." method="_on_Options_Button_mouse_entered"]
[connection signal="pressed" from="Main/CanvasLayer/HBoxContainer/Options_Button" to="." method="_on_Options_Button_pressed"]
[connection signal="mouse_entered" from="Main/CanvasLayer/HBoxContainer/Quit_Button" to="." method="_on_Quit_Button_mouse_entered"]
[connection signal="pressed" from="Main/CanvasLayer/HBoxContainer/Quit_Button" to="." method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="Options/Settings/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="timeout" from="MouseDissappear" to="." method="_on_MouseDissappear_timeout"]
